--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.7.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.303.0",
     "nodemailer": "^6.10.1",
     "react": "^18.2.0",
