--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "cors": "^2.8.5",
+        "debug": "^4.4.3",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "nodemailer": "^6.9.1"
