--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,20 @@
+[build]
+  publish = "dist"
+  command = "npm run build"
+
 [[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+  from = "/api/*"
+  to = "https://your-backend-url.herokuapp.com/api/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[build.environment]
+  # Estas variáveis devem ser configuradas no painel do Netlify
+  # VITE_AZURE_CLIENT_ID = "21f52d49-5e17-4d39-b05c-8a3f355ecbc9"
+  # VITE_AZURE_REDIRECT_URI será gerada dinamicamente
+  # VITE_BACKEND_URL = "https://your-backend-url.herokuapp.com"
