correçao do backend

--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # Azure AD Configuration
 VITE_AZURE_CLIENT_ID=21f52d49-5e17-4d39-b05c-8a3f355ecbc9
-VITE_AZURE_REDIRECT_URI=https://your-netlify-app.netlify.app/auth/callback
-VITE_BACKEND_URL=https://your-backend-url.herokuapp.com
+VITE_AZURE_REDIRECT_URI=https://132-sealogistics.netlify.app/auth/callback
+VITE_BACKEND_URL=https://one32-sealogistics.onrender.com
 
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=your_firebase_api_key
